--- a/.gitignore
+++ b/.gitignore
@@ -21,4 +21,10 @@ Thumbs.db
 node_modules/
 npm-debug.log*
 yarn-debug.log*
-yarn-error.log* 
+yarn-error.log*
+
+*
+!quicknav.js
+!quicknav.css
+!README.md
+!.gitignore 
